--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- https://www.youtube.com/watch?v=D75WTf_Y738&list=UUpzRDg0orQBZFBPzeXm1yNg -->
   	<meta charset="UTF-8">
-  	<title>AKoury Parallux tut</title>
+  	<title>Parallax </title>
   	<link rel="stylesheet" href="ak_parallax_style.css" type="text/css">
 <script type="text/javascript" src="ak_parallax.js"></script>
 
