--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@ function parallax() {
 	<script>
 	for(var i = 1; i <3; i++) {
 	   	document.write("<h1> Amazing and Wonderful Parallax! </h1> ");
-	    }</script>
-
-
-
-	
+	    }
+	    	
+	 </script>
 </div>
 
 
